--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   },
   "homepage": "https://github.com/firstandthird/arc-reply",
   "devDependencies": {
-    "eslint": "^4.9.0",
-    "eslint-config-firstandthird": "^4.0.1",
-    "eslint-plugin-import": "^2.1.0",
+    "eslint": "^5.16.0",
+    "eslint-config-firstandthird": "^4.3.0",
+    "eslint-plugin-import": "^2.17.3",
     "tap": "^14.2.2"
+  },
+  "eslintConfig": {
+    "extends": "firstandthird"
   },
   "dependencies": {
   }
