--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arc-reply",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "helper library that simplifies HTTP responses from arc/lambda",
   "main": "index.js",
   "repository": {
@@ -26,6 +26,5 @@
   "eslintConfig": {
     "extends": "firstandthird"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
